# bort

./: BUILD  README.md
diff/: BUILD.bazel  README.md  diff.go  diff_test.go  testfile1.txt  testfile2.txt
